Attempt to fix text rendering issue caused by older Chrome, optimizelegibility and woff fonts

--- a/style/_reset.scss
+++ b/style/_reset.scss
@@ -5,7 +5,7 @@ border: 0;
 font-size: 100%;
 font: inherit;
 box-sizing: border-box;
-vertical-align: baseline; }
+}
  
 /* HTML5 display-role reset for older browsers */
  
